--- a/src/style.css
+++ b/src/style.css
@@ -184,7 +184,7 @@ button {
 }
 
 .outro {
-  padding: 24px;
+  padding: 0 24px 24px;
 }
 
 @media (min-width: 500px) {
